--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </section>
         <section class="reservation">
             <div class=" reservation__container flexbox max-width">
-                <h2> Ready to make a reservation? </h2>
+                <h2 class="heading-2"> Ready to make a reservation? </h2>
                 <a href="#" class="btn"> BOOK A TABLE</a>
             </div>
         </section>
