--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <figure class="background__title-header__logo">
                         <img src="img/dine.logo.svg" alt="logo dine">
                     </figure>
-                    <h1 class="background__heading-1">Exquisite dining 
+                    <h1 class="heading-1">Exquisite dining 
                         since 1989</h1>
                     <p class="background__para">
                         Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from
                         the comfort of our farmhouse.
                     </p>
-                <a href="#" class="btn btn--background ">BOOK A TABLE</a>
+                <a href="table.html" class="btn btn--background ">BOOK A TABLE</a>
             </div>
         </div>
 
@@ -155,7 +155,7 @@
                             We love catering for entire families. So please bring everyone along for a special meal with
                             your loved ones. We’ll provide a memorable experience for all.
                         </p>
-                        <a href="#" class="btn btn-black"> BOOK A TABLE</a>
+                        <a href="table.html" class="btn btn-black"> BOOK A TABLE</a>
                     </div>
 
                     <div class="buttons">
@@ -170,9 +170,11 @@
         <section class="reservation">
             <div class=" reservation__container flexbox max-width">
                 <h2 class="heading-2"> Ready to make a reservation? </h2>
-                <a href="#" class="btn"> BOOK A TABLE</a>
+                <a href="table.html" class="btn"> BOOK A TABLE</a>
             </div>
         </section>
+    </main>
+
         <div class="footer">
             <footer class="footer__container flexbox max-width">
                 <figure class="footer__container__picture">
@@ -202,7 +204,6 @@
             </footer>
         </div>
 
-    </main>
     <script src="js/main.js"></script>
     <script src="js/jquery.js"></script>
 </body>
