--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </picture>
               
                 <div class="container-article">
-                    <h2 class="heading-2">Enjoyable place
+                    <h2 class="heading-2">Enjoyable place <br>
                         for all the family</h2>
 
                     <p>
