--- a/table.html
+++ b/table.html
@@ -24,6 +24,8 @@
                     We can’t wait to host you. If you have any special requirements please feel free to call on the phone number below. We’ll be happy to accommodate you.
                 </p>
             </div>
+            <a href="#" class="bg-table__reserve display-none btn btn--background"> reserve place</a>
+
         </div>
     </header>
     <main class="main-table">
