--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
         <div class="background">
             <div class="background__container">
-                    <figure class="background__title-header__logo">
-                        <img src="img/dine.logo.svg" alt="logo dine">
-                    </figure>
+                <nav>
+                    <a href="index.html"> <img src="img/dine.logo.svg" alt="logo"> </a>
+                 </nav>
                     <h1 class="heading-1">Exquisite dining 
                         since 1989</h1>
                     <p class="background__para">
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <section class="twobox">
+        <div class="twobox">
             <article class="twobox__container-enjoy flexbox max-width">
                 <picture class="twobox__container-enjoy__picture">
                     <source media="(max-width: 650px)" srcset="img/mobile/enjoy.png"> 
@@ -65,9 +65,9 @@
                     <img src="img/main-page/most.png" alt="photo article most">
                 </picture>
             </article>
-        </section>
+        </div>
 
-        <section class="highlights ">
+        <div class="highlights ">
             <div class="highlights__container flexbox max-width">
 
 
@@ -125,9 +125,9 @@
                 </article>
 
             </div>
-        </section>
+        </div>
 
-        <section class="family">
+        <div class="family">
             <div class="family__container flexbox max-width">
 
                 <picture class="family__container-img1">
@@ -166,13 +166,13 @@
                 </article>
 
             </div>
-        </section>
-        <section class="reservation">
+        </div>
+        <div class="reservation">
             <div class=" reservation__container flexbox max-width">
                 <h2 class="heading-2"> Ready to make a reservation? </h2>
                 <a href="table.html" class="btn"> BOOK A TABLE</a>
             </div>
-        </section>
+        </div>
     </main>
 
         <div class="footer">
@@ -180,7 +180,7 @@
                 <figure class="footer__container__picture">
                     <img src="img/dine.logo.svg" alt="logo dine">
                 </figure>
-                <article class=" footer__address flexbox">
+                <div class=" footer__address flexbox">
                 <div class="footer__address__container">
                     <address class="para-footer">
                         Marthwaite, Sedbergh
@@ -200,7 +200,7 @@
                     <p class="para-footer"> SAT - SUN: 09:00 AM - 11:30 PM</p>
 
                 </div>
-            </article>
+            </div>
             </footer>
         </div>
 
