--- a/table.html
+++ b/table.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="bg-table">
-            <figure>
-                <img src="img/dine.logo.svg" alt="" srcset="">
-            </figure>
+            <nav>
+               <a href="index.html"> <img src="img/dine.logo.svg" alt="logo"> </a>
+            </nav>
             <div class="bg-table__container">
                 <h1 class="heading-1">Reservations </h1>
                 <p>
@@ -31,7 +31,7 @@
     <main class="main-table">
         <div class="form">
 
-            <form action="" name="formulaire">
+            <form action="/" name="formulaire">
 
                 <div class="form__container">
                 <input type="text" name="name" id="name" placeholder="Name">
@@ -71,28 +71,28 @@
                                 <div class="arrow"></div>
                             </div>
                             <div class="custom-options">
-                                <span class="custom-option selected" name='AM' data-value="AM">AM</span>
-                                <span class="custom-option" name='PM' data-value="PM">PM</span>
+                                <span class="custom-option selected">AM</span>
+                                <span class="custom-option">PM</span>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="form__people">
-                <a href="#" id="minus"> <img src="img/reservation/minus.svg" alt="" srcset=""> </a>  <input name="quantity" type="text" class="quantity__input" value="1"> <span> people </span> <a href="#" id="plus"><img src="img/reservation/plus.svg" alt="" srcset=""> </a>
+                <a href="#" id="minus"> <img src="img/reservation/minus.svg" alt="minus"> </a>  <input name="quantity" type="text" class="quantity__input" value="1"> <span> people </span> <a href="#" id="plus"><img src="img/reservation/plus.svg" alt="plus" > </a>
                 </div>
                 <button type="submit" class="submit btn btn-black"> make a reservation</button>
             </form>
         </div>
         <div class="background-reservation">
-            <img class="background-reservation__img" src="img/reservation/Rectangle.png" alt="" srcset="">
+            <img class="background-reservation__img" src="img/reservation/Rectangle.png" alt="background">
         </div>
     </main>
     <div class="footer">
         <footer class="footer__container flexbox max-width">
-            <figure class="footer__container__picture">
-                <img src="img/dine.logo.svg" alt="logo dine">
-            </figure>
+            <nav>
+                <a href="index.html"> <img src="img/dine.logo.svg" alt="logo"> </a>
+             </nav>
             <article class=" footer__address flexbox">
             <div class="footer__address__container">
                 <address class="para-footer">
