--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </picture>
               
                 <div class="container-article">
-                    <h2 class="heading-2">Enjoyable place <br>
+                    <h2 class="heading-2 h2-black">Enjoyable place <br>
                         for all the family</h2>
 
                     <p>
@@ -53,7 +53,7 @@
             <article class="twobox__container-most flexbox max-width">
 
                 <div class="container-article">
-                    <h2 class="heading-2">The most locally sourced food</h2>
+                    <h2 class="heading-2 h2-black">The most locally sourced food</h2>
 
                     <p>
                         All our ingredients come directly from our farm or local fishery. So you can be sure that you’re
@@ -72,7 +72,7 @@
 
 
                 <article class="container-article">
-                    <h2 class="heading-black-2">A few highlights from our menu</h2>
+                    <h2>A few highlights from our menu</h2>
 
                     <p>
                         We cater for all dietary requirements, but here’s a glimpse at some of our diner’s favourites.
@@ -150,7 +150,7 @@
                 <article class="family__gathering">
 
                     <div class="container-article">
-                        <h2 class="heading-2"> Family Gathering </h2>
+                        <h2 class="heading-2 h2-black"> Family Gathering </h2>
                         <p>
                             We love catering for entire families. So please bring everyone along for a special meal with
                             your loved ones. We’ll provide a memorable experience for all.
