--- a/table.html
+++ b/table.html
@@ -93,7 +93,7 @@
             <nav>
                 <a href="index.html"> <img src="img/dine.logo.svg" alt="logo"> </a>
              </nav>
-            <article class=" footer__address flexbox">
+            <div class=" footer__address flexbox">
             <div class="footer__address__container">
                 <address class="para-footer">
                     Marthwaite, Sedbergh
@@ -113,7 +113,7 @@
                 <p class="para-footer"> SAT - SUN: 09:00 AM - 11:30 PM</p>
 
             </div>
-        </article>
+        </div>
         </footer>
     </div>
 
